--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -588,7 +588,7 @@ Sensus is expected to be largely task dependent, however when performing a task 
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=\textwidth]{focus-locus-sensus-with-virtuality-continuum-with-transition-updated-with-grid.png}
+		\includegraphics[width=\textwidth]{transition-rw-vr.png}
 		\caption{Operation of a PR system represented upon the combined model.}
 		\label{focus-locus-sensus-with-virtuality-continuum-with-transition}
 	\end{center}	
