--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -629,14 +629,7 @@ Independent or in addition to any of the previous scenarios, the maximum opacity
 
 
 
-%=========================================================================================================
-
-
-
-
-
-
-
+\clearpage
 
 
 
@@ -711,37 +704,3 @@ screenshots
 First time trying it at St Salvator's with other people (Ariana \& Alan)
 \url{https://www.youtube.com/watch?v=pvGV5dCjt4U}
 screenshots
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-%=========================================================================================================
-
-%\textit{Two different buildings have been prepared for use with the Mirrorshades platform, with VR environments constructed \& the IndoorAtlas IPS deployed. The first is a modern building accompanied by a VR environment that closely depicts it in the present day. The second is a historic building accompanied by a VR environment that differs markedly from the present day, by depicting its state a point hundreds of years in the past.}
-
-%\textit{In the first, participants will be given a simple task to complete which will encourage them to engage with the VR environment even though it presents a similar view to their RW environment. In the second scenario, participants will be prompted to engage in more free form exploration of their environments, comparing \& contrasting the markedly different VR environment with what they see around them in their RW environment.}
-
-%\subsection{Jack Cole Building}
-%The School of Computer Science Jack Cole building at St Andrews is a modern building, built in 2004. The VR environment accompanying the building is a fairly close representation of the building as it stands today. Figure \ref{jc_layout} shows the layout of the building \& the path that IndoorAtlas has been prepared for.
-
-%There are four coloured panels (red, green, blue \& yellow) situated within the VR building upon walls, floor \& ceiling. Participants will be asked to remember in what order these panels are seen as they walk a lap of the building. This task is designed to encourage participants to switch between RW \& VR visual stimuli, even though the VR visual stimuli are very similar to those of the RW environment. This scenario is also intended to encourage participants to keep moving, rather than stopping at \& starting.
-
-%\begin{figure}
-%	\begin{center}
-%		\includegraphics[width=0.7\textwidth]{JC_layout.png}
-%		\caption{Floor plan of Jack Cole building, with IPS route.}
-%		\label{jc_layout}
-%	\end{center}
-%\end{figure}
-
-%=========================================================================================================
